syntax = "proto3";

package product;

service ProductService {
  rpc GetProductById (ProductRequest) returns (ProductResponse);
  rpc UpdateProductQuantity (UpdateQuantityRequest) returns (UpdateQuantityResponse);
}

message ProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message UpdateQuantityRequest {
  string productId = 1;
  int32 quantity = 2;
}

message UpdateQuantityResponse {
  bool success = 1;
  string message = 2;
}